--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="inner-lists">
                         <ul>
                             <li>App Design & Research</li>
@@ -162,7 +162,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="inner-lists">
                         <ul>
                             <li>Development & Testing</li>
@@ -170,7 +170,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="inner-lists">
                         <ul>
                             <li>App Design & Research</li>
@@ -187,7 +187,7 @@
         <div class="container">
             <div class="inner-head">Core Features</div>
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="box-imges">
                             <img src="./assests/image/features1.jpg" alt="features1">
@@ -201,7 +201,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="card">
                             <img src="./assests/image/features2.jpg" alt="features2">
@@ -215,7 +215,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="card">
                             <img src="./assests/image/features3.jpg" alt="features3">
@@ -290,7 +290,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
                     <div class="box-parent">
                         <div class="box-image">
                             <img src="./assests/image/team1.jpg" alt="team1">
@@ -310,7 +310,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
                     <div class="box-parent">
                         <div class="box-image">
                             <img src="./assests/image/team2.jpg" alt="team2">
@@ -330,7 +330,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
                     <div class="box-parent">
                         <div class="box-image">
                             <img src="./assests/image/team3.jpg" alt="team3">
@@ -350,7 +350,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
                     <div class="box-parent">
                         <div class="box-image">
                             <img src="./assests/image/team4.jpg" alt="team4">
@@ -424,7 +424,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-content">
                         <div class="inner-desc">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae curabitur libero felis ullamcorper.
@@ -445,7 +445,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-content">
                         <div class="inner-desc">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae curabitur libero felis ullamcorper.
@@ -466,7 +466,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-content">
                         <div class="inner-desc">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae curabitur libero felis ullamcorper.
@@ -524,13 +524,13 @@
                 </div>
                 <form action="" class="form-group form-parent">
                     <div class="row">
-                        <div class="col-xl-4">
+                        <div class="col-xl-4 col-lg-4 col-md-12">
                             <input type="text" class="form-input form-control" placeholder="Full name" name="Fullname">
                         </div>
-                        <div class="col-xl-4">
+                        <div class="col-xl-4 col-lg-4 col-md-12">
                             <input type="email"class="form-input form-control" placeholder="Email adress" name="email">
                         </div>
-                        <div class="col-xl-4">
+                        <div class="col-xl-4 col-lg-4 col-md-12">
                             <input type="text" class="form-input form-control" placeholder="Subject" name="Subject">
                         </div>
                         <div class="col-xl-12">
