update mobile 576px

--- a/index.html
+++ b/index.html
@@ -64,15 +64,9 @@
                     <div class="inner-title">Software App</div>
                     <p class="inner-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Accumsan porttitor egestas fermentum nulla.</p>
                 </div>
-                <div class="col-lg-6 col-12">
-                    <div class="inner-button">
-                        <button class="inner-btn btn button-hightlight">Our Services</button>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-12">
-                    <div class="inner-button">
-                        <button class="inner-btn btn button-hightlight btn-transparent">Learn More</button>
-                    </div>
+                <div class="inner-button">
+                    <button class="inner-btn btn button-hightlight">Our Services</button>
+                    <button class="inner-btn btn button-hightlight btn-transparent">Learn More</button>
                 </div>
             </div>
         </div>
@@ -371,7 +365,7 @@
                     </div>
                 </div>
             </div>
-            <div class="box-parent">
+            <div class="box-parent box-parent-bg">
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="box-bgd">
